Fix forced dark mode on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -30,3 +30,7 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+:root {
+  color-scheme: light dark;
+}
